# Genetic-Algorithm-CUDA

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  input_graph.txt  output_ga.txt  output_graph.txt
.github/workflows/: doxygen-pages.yml
include/ctqw/fitness/: CtqwFitnessEvaluator.cuh  CtqwFitnessEvaluator.cuh.rej
include/ctqw/graph/: Edge.hpp  Graph.hpp  RandomGraph.hpp
include/ctqw/observable/: Probability.hpp
include/ctqw/problem/: ReusableTransferEvaluator.cuh  TransferEvaluator.cuh  TransferProblem.hpp
include/ctqw/solver/: CtqwKernels.cuh  CtqwRk4Solver.cuh
include/ctqw/sparse/: CsrMatrix.hpp  DeviceCsrMatrix.cuh  LaplacianBuilder.hpp  LaplacianStructure.hpp  LaplacianWeightUpdater.cuh
include/ctqw/utils/: CudaCheck.cuh
include/ga/concepts/: CudaCrossoverConcept.hpp  CudaFitnessComparatorConcept.hpp  CudaFitnessConcept.hpp  CudaMutationConcept.hpp  CudaPopulationInitializerConcept.hpp  CudaSelectionConcept.hpp
include/ga/control/: CudaSimpleParameterController.hpp
include/ga/core/: CudaChromosome.hpp  CudaFitnessComparator.hpp  CudaGeneticAlgorithm.hpp  CudaOptimization.hpp
include/ga/fitness/: CudaTargetFitness.hpp
include/ga/kernels/: CudaEvaluationKernels.cuh  CudaKernels.cuh  CudaPopulationManagerKernels.cuh  CudaRandomKernels.cuh  CudaReproductionKernels.cuh  CudaSelectionKernels.cuh
include/ga/operators/crossover/: CudaSBXCrossover.hpp  CudaUniformCrossover.hpp
include/ga/operators/mutation/: CudaGaussianMutation.hpp  CudaPolynomialMutation.hpp
include/ga/operators/selection/: CudaTournamentSelection.hpp
include/ga/population/: CudaPopulationManager.hpp  CudaTruncatedGaussianPopulation.cuh  CudaUniformPopulation.cuh
include/ga/utils/: CudaCheck.cuh  CudaCheck.hpp  CudaRandom.cuh  GATelemetry.hpp
problems/ctqw/: main.cu
problems/ctqw/include/fitness/: CtqwFitnessEvaluator.cuh
problems/ctqw/include/graph/: Graph.hpp
problems/ctqw/include/problem/: StateTransferEvaluator.cuh
problems/ctqw/include/solver/: CtqwBatchKernels.cuh  CtqwKernels.cuh  CtqwRk4Solver.cuh
problems/ctqw/include/sparse/: DeviceWeightedLaplacian.cuh
problems/ctqw/include/utils/: CudaCheck.cuh
problems/ctqw/src/fitness/: CtqwFitnessEvaluator.cu
problems/ctqw/src/problem/: StateTransferEvaluator.cu
problems/ctqw/src/solver/: CtqwBatchKernels.cu  CtqwKernels.cu  CtqwRk4Solver.cu
problems/ctqw/src/sparse/: DeviceWeightedLaplacian.cu
problems/sphere/: main.cu
problems/suspended_load/: main.cu
problems/suspended_load/include/fitness/: SuspendedLoadFitnessEvaluator.cuh
problems/suspended_load/include/problem/: SuspendedLoadProblem.hpp
problems/suspended_load/include/solver/: SuspendedLoadRk4Solver.cuh
problems/suspended_load/src/solver/: SuspendedLoadRk4Solver.cu
problems/target_5/: main.cu
scripts/: animate_suspended_load.py  plot_ga_telemetry.py
src/: main.cu
src/ctqw/fitness/: CtqwFitnessEvaluator.cu
src/ctqw/problem/: ReusableTransferEvaluator.cu  TransferEvaluator.cu
src/ctqw/solver/: CtqwKernels.cu  CtqwRk4Solver.cu
src/ctqw/sparse/: DeviceCsrMatrix.cu  LaplacianBuilder.cpp  LaplacianStructure.cpp  LaplacianWeightUpdater.cu
